--- a/qrcodeStylesheet.css
+++ b/qrcodeStylesheet.css
@@ -1,5 +1,5 @@
 .attribution {
-    font-size: 11px;
+    font-size: 0.7rem; 
     text-align: center;
     position: absolute;
     bottom: 10px;
@@ -37,10 +37,10 @@ main {
     font-style: normal;
 }
 h1 {
-    font-size: 25px;
+    font-size: 1.56rem;
 }
 p {
-    font-size: 15px;
+    font-size: 0.93rem;
     color: var(--Slate-500);
 }
 .ui-container {
